# nostr-vanity

./: CMakeLists.txt  README.md
src/: main.cpp
